# fya

./: .dockerignore  .gitignore  CHANGELOG.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  guard-web.yml  publish.yml
docs/: architecture.md  checks.md  sample-report.html
examples/: demo.py  secure_app.py  vulnerable_app.py
fya/: authorization.py  baseline.py  cli.py  detect.py  engine.py  fingerprint.py  http.py  models.py  registry.py  report.py  spa.py  tools.py
fya/checks/: _common.py  api.py  apk.py  blackbox.py  graybox.py  integrations.py  tls.py  web_active.py  web_advanced.py  web_cache.py  web_cors.py  web_csp.py  web_files.py  web_headers.py  web_injection.py  web_jwt.py  web_libs.py  web_passive.py  web_secrets.py  web_ssrf.py  web_wellknown.py  whitebox.py
scripts/: make_demo_gif.py  make_icons.py
skills/fya/: SKILL.md
skills/fya/references/: apk.md  checks.md  report-template.md  strategies.md  tls-api.md  web.md
skills/fya/scripts/: apk_scan.py
tests/: conftest.py  test_apk_extra.py  test_apk_manifest.py  test_apk_scan.py  test_authorization.py  test_detect.py  test_fp_control.py  test_integrations.py  test_new_web_checks.py  test_report.py  test_strategies.py  test_web_advanced.py  test_web_scan.py  test_whitebox_cicd.py
web/: README.md  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/docs/: page.tsx
web/components/: Callout.tsx  CodeBlock.tsx  DocsMobileNav.tsx  Footer.tsx  Mark.tsx  Nav.tsx  Reveal.tsx
