[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fya"
version = "0.1.0"
description = "Point it at your app, it tries to break it. A dynamic security scanner for localhost servers and Android APKs."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "FYA contributors" }]
keywords = ["security", "dast", "pentest", "vulnerability-scanner", "owasp", "apk", "appsec"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.28",
    "rich>=13.0",
]

[project.optional-dependencies]
apk = ["androguard>=4.0"]
browser = ["playwright>=1.40"]
dev = ["pytest>=7.4", "ruff>=0.4", "flask>=3.0"]

[project.scripts]
fya = "fya.cli:main"

[project.urls]
Homepage = "https://github.com/ayam04/fya"
Repository = "https://github.com/ayam04/fya"
Issues = "https://github.com/ayam04/fya/issues"

[tool.hatch.build.targets.wheel]
packages = ["fya"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
